--- a/C_exam_sem1_Comments/C_exam_sem1_Comments.csproj
+++ b/C_exam_sem1_Comments/C_exam_sem1_Comments.csproj
@@ -69,6 +69,12 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="modifyMotorbike.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="modifyMotorbike.Designer.cs">
+      <DependentUpon>modifyMotorbike.cs</DependentUpon>
+    </Compile>
     <Compile Include="Motorbike.cs" />
     <Compile Include="PasswordForm.cs">
       <SubType>Form</SubType>
@@ -86,6 +92,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Logo.resx">
       <DependentUpon>Logo.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="modifyMotorbike.resx">
+      <DependentUpon>modifyMotorbike.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="PasswordForm.resx">
       <DependentUpon>PasswordForm.cs</DependentUpon>
